# friday-night-api

./: .dockerignore  Dockerfile  FRONTEND_CONTEXT.md  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 034101a3d975_add_label_to_cards.py  25ce00c3d881_criando_model_cards.py  3db3ae0422b5_criando_tabela_users.py  70aaa383cb25_atualizando_models.py  acddee5c9409_fix_table_user.py
app/: main.py
app/agent/: schema.py  service.py  tools.py
app/api/: router.py
app/api/versions/: v1.py
app/core/: config.py  database.py  exception.py  utils.py
app/domain/: __init__.py
app/domain/accounts/: exceptions.py  model.py  repo.py  router.py  schemas.py  service.py
app/domain/currencies/: exceptions.py  model.py  repo.py  router.py  schema.py  service.py
app/domain/financial_institutions/: exceptions.py  model.py  repo.py  router.py  schemas.py  service.py
app/domain/holdings/: model.py  repo.py  router.py  schemas.py  service.py
app/domain/payment_methods/: exceptions.py  model.py  repo.py  router.py  schemas.py  service.py
app/models/: user.py
app/modules/: __init__.py
app/telegram/: router.py  schema.py  service.py
collection/Friday Night API/: bruno.json
test/: conftest.py  test_accounts.py  test_auth.py  test_financial_institutions.py  test_user.py
tests/: conftest.py  factories.py  test_accounts.py  test_auth.py  test_currencies.py  test_financial_institutions.py  test_holdings.py  test_payment_method.py  test_transaction_tag.py  test_transactions.py  test_user.py
(+109 files in other folders)
